# keras-neural-processes

./: .gitignore  CITATION.cff  OPTIMIZATIONS.md  README.md  benchmark.py  cnp.py  gp_data.py  performance_test.py  pyproject.toml  setup.py
.github/workflows/: linter.yml  testing-and-coverage.yml
keras_neural_processes/: __init__.py  optimized.py  src.py  utils.py
layers/: decoders.py  encoders.py
legacy/: legacy.py  plotting.py
models/: __init__.py  cnp.py  lnp.py
tests/: conftest.py  test_knp.py  test_training.py  test_utils.py
utils/: data.py  metrics.py  plotting.py
